Fix layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,19 @@ div {
 
 /* .................. GAME MENU MAIN PAGE */
 
-.game-menu {
+.game-menu-1 {
+    margin: auto;
+    width: 50%;
+    border: none;
+    padding: 10px;
+    margin-top: 100px;
+    text-transform: uppercase;
+    font-size: 30px;
+    text-decoration: none;
+    text-align: center;
+}
+
+.game-menu-2 {
     margin: auto;
     width: 50%;
     border: none;
